Force redirection to home page

--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if (location.pathname !== "/") {
+        location.replace("/");
+      }
+    </script>
+    
   </body>
 </html>
